avoid zooming on mobile

--- a/src/app/Components/search-input/search-input.component.css
+++ b/src/app/Components/search-input/search-input.component.css
@@ -3,24 +3,24 @@
   justify-content: center;
   width: 100%;
   height: 50px;
-  /* background-color: red; */
   margin-top: 2rem;
   gap: 1rem;
 }
 
 input {
     height: 100%;
-  border-radius: 25px;
-  border: 0px;
-  padding-left: 1rem;
-  filter: drop-shadow(1px 1px 3px black);
+    border-radius: 25px;
+    border: 0px solid;
+    padding-left: 1rem;
+    filter: drop-shadow(1px 1px 3px black);
 }
 
 button {
     height: 100%;
     border-radius: 25px;
     border: 0px;
-    padding: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     color: white;
     background-color: rgb(23, 23, 51);
     filter: drop-shadow(1px 1px 3px black);
@@ -31,4 +31,8 @@ button:hover {
     background-color: rgb(55, 55, 114);
     cursor: pointer;
     transition: all 400ms ease-out;
+  }
+
+  input, button {
+    box-sizing: border-box;
   }
