--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,7 +14,6 @@
   top: 0;
   padding: 0;
   border: 0px;
-  box-sizing: border-box;
   align-items: center;
   justify-content: center;
   display: flex;
